dataset1235/2025-2/610742602/users/1997662715/executions/677928262_48684178.log
== RUN (2025-08-28 14:51:55)
-- CODE: 
total_vendas = lucro, 2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total_vendas = lucro, 2
                   ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total_vendas = lucro, 2
                   ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total_vendas = lucro, 2
                   ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total_vendas = lucro, 2
                   ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total_vendas = lucro, 2
                   ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total_vendas = lucro, 2
                   ^^^^^
NameError: name 'lucro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 14:53:50)
-- CODE: 
total_vendas = float(input())

lucro = total_vendas * 0.30

print(round(lucro, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:52:22)
-- CODE: 
total_vendas = float(input())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
None
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
None
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
None
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
None
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
None
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:53:11)
-- CODE: 
total_vendas = float(input())

lucro = total_vendas * 0.30
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
None
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
None
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
None
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
None
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
None
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 14:53:09)
-- CODE: 
total_vendas = float(input())

lucro = total_vendas * 0.30
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
None
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
None
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
None
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
None
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
None
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
